新增模型管理功能
在 `Modeeels.razor` 檔案中，移除了多個 `ModelData` 物件的定義。新增了 `AddModule` 方法以便於新增模型，並新增了 `CopyModule` 方法來複製最後一個模型。這些變更提升了模型的管理靈活性與便利性。

--- a/VW_DMPP/Pages/Modeeels.razor
+++ b/VW_DMPP/Pages/Modeeels.razor
@@ -218,84 +218,54 @@
                 IsCollapsed = false,
                 Axes = new List<AxisData>
                 {
-                    new AxisData { Name = "X", EncoderJIS = "±0.010/全行程", EncoderVDI = "P 0.015", EncoderJISRepeat = "±0.003", EncoderVDIRepeat = "PS 0.010", OpticalJIS = "±0.008/全行程", OpticalVDI = "P 0.010", OpticalJISRepeat = "±0.002", OpticalVDIRepeat = "PS 0.008" },
-                    new AxisData { Name = "Y", EncoderJIS = "±0.010/全行程", EncoderVDI = "P 0.018", EncoderJISRepeat = "±0.003", EncoderVDIRepeat = "PS 0.015", OpticalJIS = "±0.008/全行程", OpticalVDI = "P 0.016", OpticalJISRepeat = "±0.002", OpticalVDIRepeat = "PS 0.012" },
-                    new AxisData { Name = "Z", EncoderJIS = "±0.010/全行程", EncoderVDI = "P 0.012", EncoderJISRepeat = "±0.003", EncoderVDIRepeat = "PS 0.010", OpticalJIS = "±0.008/全行程", OpticalVDI = "P 0.010", OpticalJISRepeat = "±0.002", OpticalVDIRepeat = "PS 0.008" }
-                }
-            },
-            new ModelData
-            {
-                Id = "sf2612",
-                Name = "SF-2612",
-                IsCollapsed = true,
-                Axes = new List<AxisData>
-                {
-                    new AxisData { Name = "X", EncoderJIS = "±0.012/全行程", EncoderVDI = "P 0.018", EncoderJISRepeat = "±0.004", EncoderVDIRepeat = "PS 0.012", OpticalJIS = "±0.009/全行程", OpticalVDI = "P 0.012", OpticalJISRepeat = "±0.003", OpticalVDIRepeat = "PS 0.009" },
-                    new AxisData { Name = "Y", EncoderJIS = "±0.012/全行程", EncoderVDI = "P 0.020", EncoderJISRepeat = "±0.004", EncoderVDIRepeat = "PS 0.018", OpticalJIS = "±0.009/全行程", OpticalVDI = "P 0.018", OpticalJISRepeat = "±0.003", OpticalVDIRepeat = "PS 0.014" },
-                    new AxisData { Name = "Z", EncoderJIS = "±0.012/全行程", EncoderVDI = "P 0.014", EncoderJISRepeat = "±0.004", EncoderVDIRepeat = "PS 0.012", OpticalJIS = "±0.009/全行程", OpticalVDI = "P 0.012", OpticalJISRepeat = "±0.003", OpticalVDIRepeat = "PS 0.009" }
-                }
-            },
-            new ModelData
-            {
-                Id = "sf2116",
-                Name = "SF-2116",
-                IsCollapsed = true,
-                Axes = new List<AxisData>
-                {
-                    new AxisData { Name = "X", EncoderJIS = "±0.010/全行程", EncoderVDI = "P 0.015", EncoderJISRepeat = "±0.003", EncoderVDIRepeat = "PS 0.010", OpticalJIS = "±0.008/全行程", OpticalVDI = "P 0.010", OpticalJISRepeat = "±0.002", OpticalVDIRepeat = "PS 0.008" },
-                    new AxisData { Name = "Y", EncoderJIS = "±0.010/全行程", EncoderVDI = "P 0.018", EncoderJISRepeat = "±0.003", EncoderVDIRepeat = "PS 0.015", OpticalJIS = "±0.008/全行程", OpticalVDI = "P 0.016", OpticalJISRepeat = "±0.002", OpticalVDIRepeat = "PS 0.012" },
-                    new AxisData { Name = "Z", EncoderJIS = "±0.012/全行程", EncoderVDI = "P 0.016", EncoderJISRepeat = "±0.003", EncoderVDIRepeat = "PS 0.012", OpticalJIS = "±0.009/全行程", OpticalVDI = "P 0.014", OpticalJISRepeat = "±0.002", OpticalVDIRepeat = "PS 0.010" }
-                }
-            },
-            new ModelData
-            {
-                Id = "sf3112",
-                Name = "SF-3112",
-                IsCollapsed = true,
-                Axes = new List<AxisData>
-                {
-                    new AxisData { Name = "X", EncoderJIS = "±0.011/全行程", EncoderVDI = "P 0.016", EncoderJISRepeat = "±0.003", EncoderVDIRepeat = "PS 0.011", OpticalJIS = "±0.009/全行程", OpticalVDI = "P 0.011", OpticalJISRepeat = "±0.002", OpticalVDIRepeat = "PS 0.009" },
-                    new AxisData { Name = "Y", EncoderJIS = "±0.011/全行程", EncoderVDI = "P 0.019", EncoderJISRepeat = "±0.003", EncoderVDIRepeat = "PS 0.016", OpticalJIS = "±0.009/全行程", OpticalVDI = "P 0.017", OpticalJISRepeat = "±0.002", OpticalVDIRepeat = "PS 0.013" },
-                    new AxisData { Name = "Z", EncoderJIS = "±0.011/全行程", EncoderVDI = "P 0.013", EncoderJISRepeat = "±0.003", EncoderVDIRepeat = "PS 0.011", OpticalJIS = "±0.009/全行程", OpticalVDI = "P 0.011", OpticalJISRepeat = "±0.002", OpticalVDIRepeat = "PS 0.009" }
-                }
-            },
-            new ModelData
-            {
-                Id = "sf2616",
-                Name = "SF-2616",
-                IsCollapsed = true,
-                Axes = new List<AxisData>
-                {
-                    new AxisData { Name = "X", EncoderJIS = "±0.012/全行程", EncoderVDI = "P 0.018", EncoderJISRepeat = "±0.004", EncoderVDIRepeat = "PS 0.012", OpticalJIS = "±0.009/全行程", OpticalVDI = "P 0.012", OpticalJISRepeat = "±0.003", OpticalVDIRepeat = "PS 0.009" },
-                    new AxisData { Name = "Y", EncoderJIS = "±0.012/全行程", EncoderVDI = "P 0.020", EncoderJISRepeat = "±0.004", EncoderVDIRepeat = "PS 0.018", OpticalJIS = "±0.009/全行程", OpticalVDI = "P 0.018", OpticalJISRepeat = "±0.003", OpticalVDIRepeat = "PS 0.014" },
-                    new AxisData { Name = "Z", EncoderJIS = "±0.014/全行程", EncoderVDI = "P 0.018", EncoderJISRepeat = "±0.004", EncoderVDIRepeat = "PS 0.014", OpticalJIS = "±0.010/全行程", OpticalVDI = "P 0.016", OpticalJISRepeat = "±0.003", OpticalVDIRepeat = "PS 0.011" }
-                }
-            },
-            new ModelData
-            {
-                Id = "sf4112",
-                Name = "SF-4112",
-                IsCollapsed = true,
-                Axes = new List<AxisData>
-                {
-                    new AxisData { Name = "X", EncoderJIS = "±0.013/全行程", EncoderVDI = "P 0.019", EncoderJISRepeat = "±0.004", EncoderVDIRepeat = "PS 0.013", OpticalJIS = "±0.010/全行程", OpticalVDI = "P 0.013", OpticalJISRepeat = "±0.003", OpticalVDIRepeat = "PS 0.010" },
-                    new AxisData { Name = "Y", EncoderJIS = "±0.013/全行程", EncoderVDI = "P 0.021", EncoderJISRepeat = "±0.004", EncoderVDIRepeat = "PS 0.019", OpticalJIS = "±0.010/全行程", OpticalVDI = "P 0.019", OpticalJISRepeat = "±0.003", OpticalVDIRepeat = "PS 0.015" },
-                    new AxisData { Name = "Z", EncoderJIS = "±0.013/全行程", EncoderVDI = "P 0.015", EncoderJISRepeat = "±0.004", EncoderVDIRepeat = "PS 0.013", OpticalJIS = "±0.010/全行程", OpticalVDI = "P 0.013", OpticalJISRepeat = "±0.003", OpticalVDIRepeat = "PS 0.010" }
-                }
-            },
-            new ModelData
-            {
-                Id = "sf3116",
-                Name = "SF-3116",
-                IsCollapsed = true,
-                Axes = new List<AxisData>
-                {
-                    new AxisData { Name = "X", EncoderJIS = "±0.011/全行程", EncoderVDI = "P 0.016", EncoderJISRepeat = "±0.003", EncoderVDIRepeat = "PS 0.011", OpticalJIS = "±0.009/全行程", OpticalVDI = "P 0.011", OpticalJISRepeat = "±0.002", OpticalVDIRepeat = "PS 0.009" },
-                    new AxisData { Name = "Y", EncoderJIS = "±0.011/全行程", EncoderVDI = "P 0.019", EncoderJISRepeat = "±0.003", EncoderVDIRepeat = "PS 0.016", OpticalJIS = "±0.009/全行程", OpticalVDI = "P 0.017", OpticalJISRepeat = "±0.002", OpticalVDIRepeat = "PS 0.013" },
-                    new AxisData { Name = "Z", EncoderJIS = "±0.013/全行程", EncoderVDI = "P 0.017", EncoderJISRepeat = "±0.003", EncoderVDIRepeat = "PS 0.013", OpticalJIS = "±0.010/全行程", OpticalVDI = "P 0.015", OpticalJISRepeat = "±0.002", OpticalVDIRepeat = "PS 0.011" }
+                    new AxisData { Name = "X", EncoderJIS = "±0.010/全行程", EncoderVDI = "P 0.015", EncoderJISRepeat = "±0.003", EncoderVDIRepeat = "PS 0.010", OpticalJIS = "±0.008/全行程", OpticalVDI = "P 0.010", OpticalJISRepeat = "±0.002", OpticalVDIRepeat = "PS 0.008" }
                 }
             }
         };
+    }
+
+    private void AddModule()
+    {
+        var newModel = new ModelData
+        {
+            Id = $"sf{models.Count + 1}000",
+            Name = $"SF-{models.Count + 1}000",
+            IsCollapsed = true,
+            Axes = new List<AxisData>
+            {
+                new AxisData { Name = "X", EncoderJIS = "±0.010/全行程", EncoderVDI = "P 0.015", EncoderJISRepeat = "±0.003", EncoderVDIRepeat = "PS 0.010", OpticalJIS = "±0.008/全行程", OpticalVDI = "P 0.010", OpticalJISRepeat = "±0.002", OpticalVDIRepeat = "PS 0.008" }
+            }
+        };
+
+        models.Add(newModel);
+    }
+
+    private void CopyModule()
+    {
+        if (models.Any())
+        {
+            var lastModel = models.Last();
+            var copiedModel = new ModelData
+            {
+                Id = $"{lastModel.Id}-copy",
+                Name = $"{lastModel.Name} - 複製",
+                IsCollapsed = true,
+                Axes = lastModel.Axes.Select(axis => new AxisData
+                {
+                    Name = axis.Name,
+                    EncoderJIS = axis.EncoderJIS,
+                    EncoderVDI = axis.EncoderVDI,
+                    EncoderJISRepeat = axis.EncoderJISRepeat,
+                    EncoderVDIRepeat = axis.EncoderVDIRepeat,
+                    OpticalJIS = axis.OpticalJIS,
+                    OpticalVDI = axis.OpticalVDI,
+                    OpticalJISRepeat = axis.OpticalJISRepeat,
+                    OpticalVDIRepeat = axis.OpticalVDIRepeat
+                }).ToList()
+            };
+
+            models.Add(copiedModel);
+        }
     }
 
     private void ToggleTable(string modelId)
