--- a/VW_DMPP/Pages/Testdoc.razor
+++ b/VW_DMPP/Pages/Testdoc.razor
@@ -1,7 +1,7 @@
 ﻿@page "/testdoc"
 @inject IJSRuntime JSRuntime
 
-<PageTitle>品檢項目基本資料 - SF0669</PageTitle>
+<PageTitle>品檢項目基本資料</PageTitle>
 
 <style>
   body {
@@ -808,8 +808,7 @@
     {
         if (firstRender)
         {
-            // 頁面首次渲染後執行的邏輯
-            await JSRuntime.InvokeVoidAsync("console.log", "✓ Blazor 組件已渲染完成");
+            await JSRuntime.InvokeVoidAsync("console.log", "✓ 機型管理系統已載入");
         }
     }
 }
