更新導航菜單品牌名稱及連結文本
將品牌名稱從 "VW_DMPP" 更改為 "VisionWide"。
導航連結的顯示文本已從英文更改為中文：
- "Home" 變更為 "檢驗項目清單"
- "Modeeel" 變更為 "檢驗表單"
- "Testdoc" 變更為 "檢驗標準模組"

--- a/VW_DMPP/Shared/NavMenu.razor
+++ b/VW_DMPP/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">VW_DMPP</a>
+        <a class="navbar-brand" href="">VisionWide</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -11,17 +11,17 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-home" aria-hidden="true"></span> 檢驗項目清單
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="modeeels">
-                <span class="oi oi-plus" aria-hidden="true"></span> Modeeel
+                <span class="oi oi-plus" aria-hidden="true"></span> 檢驗表單
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="testdoc">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Testdoc
+                <span class="oi oi-list-rich" aria-hidden="true"></span> 檢驗標準模組
             </NavLink>
         </div>
     </nav>
