--- a/VW_DMPP/Shared/NavMenu.razor
+++ b/VW_DMPP/Shared/NavMenu.razor
@@ -1,6 +1,9 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">VisionWide</a>
+        <a class="navbar-brand" href="">
+            <img src="images/logo.png" alt="VisionWide Logo" style="height: 30px; margin-right: 10px;" />
+            VisionWide
+        </a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
