更新檢測狀態顯示
將檢測結果從「未通過」更改為「通過」，並更新相應的 CSS 類別，以反映該項目已通過檢測。

--- a/VW_DMPP/Pages/Index.razor
+++ b/VW_DMPP/Pages/Index.razor
@@ -205,7 +205,7 @@
                         <tr>
                             <td>Y軸方向之運動與工作台面之平行度</td>
                             <td>已檢測</td>
-                            <td class="status-fail">未通過</td>
+                            <td class="status-pass">通過</td>
                             <td>2021/8/11</td>
                             <td>賴玉政</td>
                         </tr>
